sumo/tests/netconvert/errors/errors/broken_edge/edge#function__false1/errors.netconvert
Error: Unknown edge function 'xxx' in edge '1'.
Quitting (on error).
